--- a/css.css
+++ b/css.css
@@ -7,15 +7,17 @@ html {
 /* 1st section navbar*/
 .navbar {
     background-color: rgb(23, 31, 76);
-    height: 120px;
+    height: 100px;
+    width: 100%;
 }
 
 .navbar-toggler-icon {
     background-color: white;
+    display: flex;
 }
 
 .navbar-brand img {
-    width: auto;
+    width: 100%;
     height: 10vh;
 }
 
@@ -42,12 +44,14 @@ html {
     color: white;
 }
 
-@media (min-width:1245px) {
-    .nav-link {
-        color: rgb(243, 110, 8);
-        font-size: 30px;
-        text-wrap: nowrap;
+@media (max-width:350px) {
+    .navbar-brand img {
+        width: 70vmin;
+        height: 10vh;
+    }
 
+    .navbar {
+        flex-wrap: nowrap;
     }
 }
 
