--- a/css.css
+++ b/css.css
@@ -7,29 +7,24 @@ html {
 /* 1st section navbar*/
 .navbar {
     background-color: rgb(23, 31, 76);
-    height: 100px;
+    height: 80px;
     width: 100%;
 }
 
-.navbar-toggler-icon {
-    background-color: white;
-    display: flex;
+.navbar-toggler-icon span {
+
+    color: white
 }
 
 .navbar-brand img {
-    width: 100%;
-    height: 10vh;
+    min-width: 100%;
+    height: 60px;
 }
 
-.nav-item {
+.navbar-collapse ul .nav-link {
+    color: white;
     margin-right: 25px;
-}
-
-.nav-link {
-    color: rgb(243, 110, 8);
     font-size: 20px;
-    text-wrap: nowrap;
-
 }
 
 .nav-link a {
@@ -41,17 +36,14 @@ html {
 }
 
 .nav-link:hover {
-    color: white;
+    color: rgb(187, 91, 0);
 }
 
-@media (max-width:350px) {
-    .navbar-brand img {
-        width: 70vmin;
-        height: 10vh;
-    }
 
-    .navbar {
-        flex-wrap: nowrap;
+@media (max-width:323px) {
+    .navbar-brand img {
+        width: 60vw;
+        height: 16vw;
     }
 }
 
