--- a/css.css
+++ b/css.css
@@ -6,7 +6,8 @@ html {
 
 /* apply anywhere all classes */
 .btn {
-    background-color: rgb(20, 132, 20);
+    background-color: rgb(3, 72, 98);
+    color: rgb(222, 205, 205)
 }
 
 /* 1st section navbar*/
@@ -113,7 +114,7 @@ html {
 
 /* 4th section */
 .four {
-    background-color: rgb(43, 9, 60);
+    background-color: rgb(46, 2, 54);
     padding: 20px;
     text-align: center;
 }
@@ -121,7 +122,7 @@ html {
 
 .first {
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: rgb(56, 9, 73);
     color: white
 }
