--- a/css.css
+++ b/css.css
@@ -114,7 +114,7 @@ html {
 
 /* 4th section */
 .four {
-    background-color: rgb(46, 2, 54);
+    background-color: rgb(82, 14, 95);
     padding: 20px;
     text-align: center;
 }
@@ -333,48 +333,55 @@ textarea.form-control {
     overflow: hidden;
     border: 1px solid #ddd;
     border-radius: 10px;
-    background-color: #f9f9f9;
+
 }
 
 .notification-list {
     list-style: none;
     padding: 0;
     margin: 0;
+    background-color: rgb(234, 234, 11);
 }
 
 .notification-item {
-    height: 45px;
+    height: 80px;
     display: flex;
     align-items: center;
     padding: 0 18px;
+    margin-bottom: 12px;
     /* border-bottom: 1px solid #1e0445; */
     transition: transform 0.5s ease;
+    background-color: rgb(3, 153, 180);
 }
 
-@media (max-width:1245px) {
-    .section-6 {
-        padding: 20px 50px;
+.notification-item span {
+    color: rgb(36, 13, 212);
+
+
+    @media (max-width:1245px) {
+        .section-6 {
+            padding: 20px 50px;
+        }
+
     }
 
-}
+    /* last footer */
+    .sec-7 {
+        text-align: center;
+        padding: 20px 20px;
+        background-color: rgb(21, 21, 20);
 
-/* last footer */
-.sec-7 {
-    text-align: center;
-    padding: 20px 20px;
-    background-color: rgb(21, 21, 20);
+    }
 
-}
+    .list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        font-size: 20px;
+        text-wrap: nowrap;
+        overflow-x: hidden;
+    }
 
-.list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    font-size: 20px;
-    text-wrap: nowrap;
-    overflow-x: hidden;
-}
-
-.list a {
-    color: white;
-}
+    .list a {
+        color: white;
+    }
