--- a/css.css
+++ b/css.css
@@ -397,22 +397,48 @@ html {
 }
 
 /* last footer */
+.map-container iframe {
+    height: 18vw;
+}
+
 .sec-7 {
     text-align: center;
-    padding: 20px 20px;
+    padding: 10px 10px;
     background-color: rgb(21, 21, 20);
+    height: auto;
 
 }
 
 .list {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    font-size: 20px;
+    gap: 10px;
+    font-size: 1.4vw;
     text-wrap: nowrap;
     overflow-x: hidden;
 }
 
 .list a {
     color: white;
+}
+
+
+@media (max-width:576px) {
+    .list a {
+        font-size: 2.6vw;
+    }
+
+    .list {
+        gap: 7px;
+    }
+
+    .sec-7 {
+        padding: 5px 5px;
+
+    }
+
+    .map-container iframe {
+        height: 28vw;
+    }
+
 }
