--- a/css.css
+++ b/css.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 }
 
+
 body,
 html {
     overflow-x: hidden;
@@ -19,45 +20,124 @@ html {
 /* 1st section navbar*/
 .navbar {
     background-color: rgb(23, 31, 76);
-    height: 80px;
+    height: 6vw;
     width: 100%;
+    padding: 0 20px;
 }
 
-.navbar-toggler-icon span {
-
-    color: white
-}
-
+/* Logo Styling */
 .navbar-brand img {
-    min-width: 100%;
-    height: 60px;
+    height: 80px;
+    width: auto;
 }
 
-.navbar-collapse ul .nav-link {
+/* Navbar Links */
+.navbar-nav .nav-link {
     color: white;
     margin-right: 25px;
-    font-size: 20px;
+    font-size: 28px;
+    transition: color 0.3s ease;
 }
 
-.nav-link a {
-    gap: 40px;
+/* Hover Effect */
+.navbar-nav .nav-link:hover {
+    color: rgb(187, 91, 0);
 }
 
+/* Toggler Icon */
+.navbar-toggler {
+    border: none;
+    font-size: 1.5rem;
+}
+
+.navbar-toggler:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.navbar-toggler .fa-bars {
+    color: rgb(240, 240, 240);
+}
+
+/* Offcanvas Styling */
 .offcanvas-header {
     background-color: rgb(23, 31, 76);
 }
 
-.nav-link:hover {
+.offcanvas-body {
+    background-color: rgb(23, 31, 76);
+}
+
+.offcanvas .nav-link {
+    color: white;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.offcanvas .nav-link:hover {
     color: rgb(187, 91, 0);
 }
 
-
-@media (max-width:323px) {
+/* Responsive Logo for Very Small Screens */
+@media (max-width:1400px) {
     .navbar-brand img {
-        width: 60vw;
-        height: 16vw;
+        height: 5vw;
+        width: auto;
+    }
+
+    .navbar-nav .nav-link {
+        color: white;
+        margin-right: 25px;
+        font-size: 22px;
+        transition: color 0.3s ease;
     }
 }
+
+@media (max-width:992px) {
+    .navbar {
+        height: 9vw;
+    }
+
+    .navbar-brand img {
+        height: 6vw;
+        width: auto;
+    }
+}
+
+@media (max-width:678px) {
+    .navbar-brand img {
+        height: 7vw;
+        width: auto;
+    }
+}
+
+@media (max-width:500px) {
+    .navbar {
+        height: 12vw;
+    }
+
+    .navbar-brand img {
+        height: 8vw;
+        width: auto;
+    }
+
+    .navbar-toggler {
+        border: none;
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width:345px) {
+    .navbar {
+        height: 15vw;
+    }
+
+    .navbar-brand img {
+        height: 9vw;
+        width: auto;
+    }
+}
+
 
 /* 2nd section video */
 .vid {
